
    Multisite:
    * Added comment painter to notification related views
    * Added compatibility code to use hashlib.md5() instead of md5.md5(), which
      is deprecated in python > 2.5 to prevent warning messages in apache error log
    * Added host filter for "last host state change" and "last host check"
    * FIX: Preventing autocomplete in password fields of "edit profile" dialog

    BI:
    * Use Ajax to delay rendering of invisible parts of the tree (this
      saves lots of HTML code)

    WATO:
    * Added hr_mem check to the memory checkgroup to make it configurable in WATO
    * Make page_header configurable in global settings
    * FIX: Fixed some typos in ldap error messages
    * FIX: Fixed problem on user profile page when no alias set for a user
    * FIX: list valuespecs could not be extended after once saving
    * FIX: fix title of foldable areas contained in list valuespecs
    * FIX: Fixed bug where pending log was not removed in multisite setup
    * FIX: Fixed generation of auth.php (Needed for NagVis Multisite Authorisation)
    * FIX: Fixed missing general.* permissions in auth.php on slave sites in 
      case of distributed WATO setups
    * Added oracle_tablespaces configuration to the application checkgroup
    * FIX: Fixed synchronisation of mkeventd configs in distributed WATO setups
    * FIX: "Sync & Restart" did not perform restart in distributed WATO setups
    * FIX: Fixed exception in editing code of ldap group to rule plugin

    Event Console:
    * Added UNIX socket for sending events to the EC
    * Speed up rule matches in some special cases by factor of 100 and more
    * Init-Script: Improved handling of stale pidfiles
    * Init-Script: Detecting and reporting already running processes
    * WATO: Added hook to make the mkeventd reload in distributed WATO setups
      during "activate changes" process
    * Added hook mkeventd-activate-changes to add custom actions to the mkeventd