@@ -424,7 +424,7 @@ register_configvar(group,
                 default_value = lambda: userdb.ldap_filter('users', False),
             )),
             ("user_id", TextAscii(
-                title = _("User-ID Attrubute"),
+                title = _("User-ID Attribute"),
                 help  = _("The attribute used to identify the individual users. It must have "
                           "unique values to make an user identifyable by the value of this "
                           "attribute."),
@@ -469,8 +469,13 @@ register_configvar(group,
                 size = 80,
                 default_value = lambda: userdb.ldap_filter('groups', False),
             )),
+            ("member", TextAscii(
+                title = _("Member Attribute"),
+                help  = _("The attribute used to identify users group memberships."),
+                default_value = lambda: userdb.ldap_attr('member'),
+            )),
         ],
-        optional_keys = ['scope', 'filter'],
+        optional_keys = ['scope', 'filter', 'member'],
     ),
     domain = "multisite",
 )
